.gitattribute, .gitignoreに現状のVisual Studioに即したファイルを追加

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,8 @@
 *.csproj merge=union
 *.vbproj merge=union
 *.fsproj merge=union
+*.vsxproj merge=union
+*.vsxproj.filters merge=union
 *.dbproj merge=union
 
 # Standard to msysgit
