- MANIFEST recognized high DPI. ・MANIFESTで高DPIを認識させました。

--- a/mz700win.vcxproj
+++ b/mz700win.vcxproj
@@ -105,6 +105,7 @@
     </Bscmake>
     <Manifest>
       <AdditionalManifestFiles>$(ProjectDir)\$(TargetFileName).manifest</AdditionalManifestFiles>
+      <EnableDpiAwareness>true</EnableDpiAwareness>
     </Manifest>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -159,6 +160,7 @@
     </Bscmake>
     <Manifest>
       <AdditionalManifestFiles>$(ProjectDir)\$(TargetFileName).manifest</AdditionalManifestFiles>
+      <EnableDpiAwareness>true</EnableDpiAwareness>
     </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup>
